--- a/KUSAapp/static/css/style.css
+++ b/KUSAapp/static/css/style.css
@@ -1,61 +1,109 @@
+/********************* * GLOBAL * *********************/
+
+/* All of the common stuff goes here under the appropriate sub headings */
+
+/* Heading formatting */
 body {
 	margin: 0;
 	font-family: arial;
 }
-#container {
-	margin: 0 auto;
+
+/* Text formatting */
+
+/* Form formatting */
+
+/* Table formatting */
+
+/* etc */
+
+
+/********************* * LAYOUT * *********************/
+
+/* All the layout things go here under sub-headings */
+
+/* Container */
+.container {
+	margin: 	0 auto;
 	text-align: center;
 }
-
-/* Top bar containing description and email/facebook? */
-#topbar {
-	width: 100%;
-	height: 40px;
-	background-color: grey;
-}
-#desc {
-	float: left;
-}
-#email {
-	float: right;
-}
-
-/* KUSA logo */
-#logo {
-	margin-top:20px;
-}
-#logo img {
-	height: 200px;
-	width: 600px;
-}
-
-/* Main page containing different things */
-#main_container {
-	width: 950px;
+.narrower-container {
+	width: 	950px;
+	height:	100%;
 	margin: 0 auto;
 }
 
-/* nav bar */
+/* Header */
+#header {
+
+}
+
+#topbar {
+	height:50px;	
+	background-color: grey;
+}
+#topbar p {
+	padding-top:15px;
+}
+#desc {
+	float:left;
+}
+#email {
+	float:right;
+}
+
+#logo {
+	height:			200px;
+	padding-top:	20px;
+	padding-bottom: 20px;
+}
+#logo img {
+	height:  200px;
+	width: 	 600px;
+	display: block;
+	margin:  0 auto;
+}
+
 #nav {
-	width:100%;
+	height:60px;
+	border-top: 1px solid grey;
+	border-bottom: 1px solid grey;
+	background-color:lightgrey;
+	z-index: 10;
 }
-#nav_list {
+#nav-list {
 	padding: 0;
-	width:100%;
+	text-align: center;
 }
-#nav_list li {
+#nav-list li {
 	display: inline-block;
-	width: 170px;
+	width: 150px;
 	font-size: 23px;
+	margin:0 auto;
 }
-#nav_list a {
+#nav-list a {
 	text-decoration: none;
 	color: grey;
 }
+.fixed {
+	position:fixed;
+	width:100%;
+	top:0;
+}
 
-/* photo carousel */
-#main_photo_stream {
-	margin:40px 48px;
+
+/*** maininfo ***/
+#maininfo {
+	margin:0 auto;
+}
+
+/* carousel */
+#carousel {
+	background-color: lightgrey;
+	height:600px;
+}
+#carousel-and-nav {
+	height:480px;
+	padding:40px 48px 10px 48px;
 }
 .jcarousel {
     position: relative;
@@ -78,7 +126,14 @@ body {
     /* Required only for block elements like <li>'s */
     float: left;
 }
-
+#pagination {
+	height:40px;
+	width:100%;
+}
+.jcarousel-pagination {
+	width:76px;
+	margin:0 auto;
+}
 .jcarousel-pagination a {
 	text-decoration: none;
 }
@@ -87,7 +142,6 @@ body {
 	width: 15px;
 	height: 15px;
 }
-
 .arrow {
 	margin-top: 235px;
 	padding: 7px;
@@ -99,55 +153,121 @@ body {
 	opacity: 0.5;
 }
 
-/* about us */
-#about_container {
+
+#about {
 	background-color:#B0CFE3;
 	height: 400px;
 	border-bottom: 1px solid #B0CFE3;
 }
-#about_us {
-	width: 950px;
-	margin: 0 auto;	
-}
-#about_us h1, p {
+#about h1 {
 	text-align: left;
-}
-#about_us h1 {
+	margin:0 auto;
 	padding-top: 30px;
 }
 
-/* Exec */
-#exec_container {
-	background-color:#65879C;
-	height: 400px;
-	border-top: 1px solid #65879C;
-}
-#exec {
-	width: 950px;
-	margin: 0 auto;	
-}
-#exec h1, p {
+#about p {
 	text-align: left;
+}
+
+#exec {
+	background-color:#65879C;
+	height: 500px;
+	border-top: 1px solid #65879C;
+	margin: 0 auto;	
 }
 #exec h1 {
+	text-align: left;
 	padding-top: 30px;
 }
+#exec p {
+	margin:0 auto;
+}
+#exec-tabs {
+  	position: relative;   
+	min-height: 300px; /* This part sucks */
+	clear: both;
+	margin: 25px 0;
+}
+.tab {
+	float: left;
+}
+.tab label {
+	background: #eee; 
+	padding: 10px; 
+	border: 1px solid #ccc; 
+	margin-left: -1px; 
+	position: relative;
+	left: 1px; 
+}
+.tab [type=radio] {
+	display: none;  
+}
+.content {
+	position: absolute;
+	top: 28px;
+	left: 0;
+	background: white;
+	right: 0;
+	bottom: 0;
+	padding: 20px;
+	border: 1px solid #ccc; 
+}
+.content > h3 p {
+	display:none;
+}
+[type=radio]:checked ~ label {
+	background: white;
+	border-bottom: 1px solid white;
+	z-index: 2;
+}
+[type=radio]:checked ~ label ~ .content {
+	z-index: 1;
+}
 
-/* photos */
-#photo_container {
+#photos {
 	background-color:#D9E0FF;
 	height: 400px;
 	border-top: 1px solid #D9E0FF;
-}
-#photos {
-	width: 950px;
 	margin: 0 auto;	
 }
-#photos h1, p {
+
+#photos h1 {
+	text-align: left;
+	padding-top: 30px;
+}
+#photos p {
 	text-align: left;
 }
-#photos h1 {
+
+#calendar {
+	background-color:#00FFFF;
+	height: 800px;
+	border-top: 1px solid #D9E0FF;
+	margin: 0 auto;	
+}
+
+#calendar h1 {
+	text-align: left;
 	padding-top: 30px;
+}
+#calendar p {
+	text-align: left;
+}
+
+
+#contact {
+	background-color:#FFFFFF;
+	height: 400px;
+	border-top: 1px solid #D9E0FF;
+	margin: 0 auto;	
+}
+
+#contact h1 {
+	text-align: left;
+	padding-top: 30px;
+}
+#contact p {
+	text-align: left;
 }
 
 #toTop {
@@ -155,3 +275,42 @@ body {
 	width: 20px;
 	float:right;
 }
+/* Footer */
+
+/********************* * NAVIGATION * *********************/
+
+/* I put navigation separate to the layout as there can be a number of navigation points under their sub-headings */
+
+/* Main (horizontal) Navigation */
+
+/* Left Navigation */
+
+/* Right Navigation */
+
+/* Breadcrumb Navigation */
+
+/********************* * FORMS * *********************/
+
+/* Any form formatting that varies from the common formatting, if there are multiple differently formatted forms, then use sub-headings */
+
+/********************* * TABLES * *********************/
+
+/* Same deal as forms */
+
+/********************* * LISTS * *********************/
+
+/* Same deal as forms and tables */
+
+/********************* * CONTENT * *********************/
+
+/* Any specific formatting for particular pages, grouped by sub-headings for the page the same way as forms, tables and lists */
+
+/********************* * CSS SUPPORT * *********************/
+
+
+
+
+
+
+/* Exec */
+
