--- a/KUSAapp/static/css/style.css
+++ b/KUSAapp/static/css/style.css
@@ -22,7 +22,7 @@ body {
 /* All the layout things go here under sub-headings */
 
 /* Container */
-.container {
+#container {
 	margin: 	0 auto;
 	text-align: center;
 }
@@ -34,7 +34,7 @@ body {
 
 /* Header */
 #header {
-
+	height:300px;
 }
 
 #topbar {
@@ -52,37 +52,40 @@ body {
 }
 
 #logo {
-	height:			200px;
+	height:			80%;
 	padding-top:	20px;
 	padding-bottom: 20px;
 }
 #logo img {
-	height:  200px;
-	width: 	 600px;
+	height:  100%;
+	width: 	 500px;
 	display: block;
 	margin:  0 auto;
 }
-
 #nav {
-	height:60px;
-	border-top: 1px solid grey;
-	border-bottom: 1px solid grey;
-	background-color:lightgrey;
-	z-index: 10;
+	height:		      60px;
+	width:			  100%;
+	border-top:       1px solid grey;
+	border-bottom:    1px solid grey;
+	background-color: lightgrey;
+	z-index: 		  10;
 }
 #nav-list {
-	padding: 0;
+	width:		100%;
+	height:		100%;
+	margin-top:	12px;
+	padding:	0;
 	text-align: center;
 }
 #nav-list li {
-	display: inline-block;
-	width: 150px;
+	display:   inline-block;
+	width: 	   150px;
 	font-size: 23px;
-	margin:0 auto;
+	margin:	   0 auto;
 }
 #nav-list a {
 	text-decoration: none;
-	color: grey;
+	color: 			 grey;
 }
 .fixed {
 	position:fixed;
@@ -103,12 +106,13 @@ body {
 }
 #carousel-and-nav {
 	height:480px;
+	width:100%;	
 	padding:40px 48px 10px 48px;
 }
 .jcarousel {
     position: relative;
     overflow: hidden;
-    width:720px;
+    width:90%;
     margin:0 auto;
     border: 10px solid grey;
     float:left;
@@ -132,6 +136,7 @@ body {
 }
 .jcarousel-pagination {
 	width:76px;
+	height:100px;
 	margin:0 auto;
 }
 .jcarousel-pagination a {
@@ -187,6 +192,15 @@ body {
 	min-height: 300px; /* This part sucks */
 	clear: both;
 	margin: 25px 0;
+}
+#exec-content {
+	background-color: white;
+}
+#exec-content table {
+	margin-left:20px;
+}
+#exec-content table td {
+	padding-left:20px;
 }
 .tab {
 	float: left;
@@ -257,7 +271,7 @@ body {
 
 #contact {
 	background-color:#FFFFFF;
-	height: 400px;
+	height: 500px;
 	border-top: 1px solid #D9E0FF;
 	margin: 0 auto;	
 }
@@ -275,8 +289,16 @@ body {
 	width: 20px;
 	float:right;
 }
-/* Footer */
 
+/* Footer */
+#footer {
+	height:50px;
+	background-color: grey;
+}
+#footer-desc {
+	float:right;
+	color:lightgrey;
+}
 /********************* * NAVIGATION * *********************/
 
 /* I put navigation separate to the layout as there can be a number of navigation points under their sub-headings */
