--- a/KUSAapp/static/css/style.css
+++ b/KUSAapp/static/css/style.css
@@ -38,17 +38,17 @@ body {
 }
 
 #topbar {
-	height:50px;	
+	height:			  50px;	
 	background-color: grey;
 }
 #topbar p {
-	padding-top:15px;
+	padding-top: 15px;
 }
 #desc {
-	float:left;
+	float: left;
 }
 #email {
-	float:right;
+	float: right;
 }
 
 #logo {
@@ -67,7 +67,7 @@ body {
 	width:			  100%;
 	border-top:       1px solid grey;
 	border-bottom:    1px solid grey;
-	background-color: lightgrey;
+	background-color: #F2F2F2;
 	z-index: 		  10;
 }
 #nav-list {
@@ -88,71 +88,71 @@ body {
 	color: 			 grey;
 }
 .fixed {
-	position:fixed;
-	width:100%;
-	top:0;
+	position: fixed;
+	width:	  100%;
+	top:	  0;
 }
 
 
 /*** maininfo ***/
 #maininfo {
-	margin:0 auto;
+	margin: 0 auto;
 }
 
 /* carousel */
 #carousel {
 	background-color: lightgrey;
-	height:600px;
+	height:			  600px;
 }
 #carousel-and-nav {
-	height:480px;
-	width:100%;	
-	padding:40px 48px 10px 48px;
+	height:  480px;
+	width:	 100%;	
+	padding: 40px 48px 10px 48px;
 }
 .jcarousel {
     position: relative;
     overflow: hidden;
-    width:90%;
-    margin:0 auto;
-    border: 10px solid grey;
-    float:left;
+    width:	  90%;
+    margin:	  0 auto;
+    border:   10px solid grey;
+    float:	  left;
 }
 .jcarousel ul {
-    width: 20000em;
+    width: 	  20000em;
     position: relative;
 
     /* Optional, required in this case since it's a <ul> element */
     list-style: none;
-    margin: 0;
-    padding: 0;
+    margin: 	0;
+    padding: 	0;
 }
 .jcarousel li {
     /* Required only for block elements like <li>'s */
     float: left;
 }
 #pagination {
-	height:40px;
-	width:100%;
+	height: 40px;
+	width:  100%;
 }
 .jcarousel-pagination {
-	width:76px;
-	height:100px;
-	margin:0 auto;
+	width:  76px;
+	height: 100px;
+	margin: 0 auto;
 }
 .jcarousel-pagination a {
 	text-decoration: none;
 }
 .jcarousel-pagination img {
 	padding: 10px 3px;
-	width: 15px;
-	height: 15px;
+	width:   15px;
+	height:  15px;
 }
 .arrow {
 	margin-top: 235px;
-	padding: 7px;
-	height: 40px;
-	width: 40px;
-	float:left;
+	padding:	7px;
+	height: 	40px;
+	width: 		40px;
+	float:		left;
 }
 .arrow:hover {
 	opacity: 0.5;
@@ -160,13 +160,13 @@ body {
 
 
 #about {
-	background-color:#B0CFE3;
-	height: 400px;
-	border-bottom: 1px solid #B0CFE3;
+	background-color: #B0CFE3;
+	height: 		  400px;
+	border-bottom: 	  1px solid #B0CFE3;
 }
 #about h1 {
-	text-align: left;
-	margin:0 auto;
+	text-align:  left;
+	margin: 	 0 auto;
 	padding-top: 30px;
 }
 
@@ -175,23 +175,23 @@ body {
 }
 
 #exec {
-	background-color:#65879C;
-	height: 500px;
-	border-top: 1px solid #65879C;
-	margin: 0 auto;	
+	/*background-color: #65879C;*/
+	height: 		  500px;
+	border-top: 	  1px solid #65879C;
+	margin: 		  0 auto;	
 }
 #exec h1 {
-	text-align: left;
+	text-align:  left;
 	padding-top: 30px;
 }
 #exec p {
-	margin:0 auto;
+	margin: 0 auto;
 }
 #exec-tabs {
-  	position: relative;   
+  	position:   relative;   
 	min-height: 300px; /* This part sucks */
-	clear: both;
-	margin: 25px 0;
+	clear: 		both;
+	margin: 	25px 0;
 }
 #exec-content {
 	background-color: white;
@@ -202,42 +202,6 @@ body {
 #exec-content table td {
 	padding-left:20px;
 }
-.tab {
-	float: left;
-}
-.tab label {
-	background: #eee; 
-	padding: 10px; 
-	border: 1px solid #ccc; 
-	margin-left: -1px; 
-	position: relative;
-	left: 1px; 
-}
-.tab [type=radio] {
-	display: none;  
-}
-.content {
-	position: absolute;
-	top: 28px;
-	left: 0;
-	background: white;
-	right: 0;
-	bottom: 0;
-	padding: 20px;
-	border: 1px solid #ccc; 
-}
-.content > h3 p {
-	display:none;
-}
-[type=radio]:checked ~ label {
-	background: white;
-	border-bottom: 1px solid white;
-	z-index: 2;
-}
-[type=radio]:checked ~ label ~ .content {
-	z-index: 1;
-}
-
 #photos {
 	background-color:#D9E0FF;
 	height: 400px;
