added lightbox for about section

--- a/KUSAapp/static/css/style.css
+++ b/KUSAapp/static/css/style.css
@@ -169,10 +169,27 @@ body {
 	margin: 	 0 auto;
 	padding-top: 30px;
 }
-
-#about p {
+#about .about-sub-section {
+	margin:0 auto;
+	margin-top:30px;
+	width:100%;
+}
+#about .about-sub-title {
+	margin:20px;
+	display:inline-block;
+	font-size: 20px;
+	font-weight: bold;
+	width:150px; 
+	height:150px; 
+	background-color:blue
+}
+#about .about-sub-desc {
 	text-align: left;
 }
+#about a {
+	text-decoration: none;
+}
+
 
 #exec {
 	/*background-color: #65879C;*/
