--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,13 @@
 		<title>Duke KUSA</title>
 		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" />                
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.fancybox.css" /> 
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/jcarousel.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/Stellar.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/script.js"></script>        
+        <script type="text/javascript" src="{{ STATIC_URL }}js/script.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.fancybox.pack.js"></script>
 	</head>
 
 	<body>
