--- a/templates/english.html
+++ b/templates/english.html
@@ -27,13 +27,57 @@
 <div id="about">
 	<div class="narrower-container">
 	    <h1> About Us </h1>
-	    <p> KUSA is the Duke University Korean Student Organization. 
-	    KUSA is the Duke University Korean Student Organization. 
-	    KUSA is the Duke University Korean Student Organization. 
-	    KUSA is the Duke University Korean Student Organization. 
-	    KUSA is the Duke University Korean Student Organization. 
-	    KUSA is the Duke University Korean Student Organization. 
-	    </p>
+	    <div class="about-sub-section">
+		    <a class="fancybox" rel="group" href="#mission">
+		    	<div class="about-sub-title">
+		    		Mission Statement
+		    	</div>		
+		    </a>
+		    <a class="fancybox" rel="group" href="#cultural">
+		    	<div class="about-sub-title">
+		    		Cultural Activities
+		    	</div>		
+		    </a>
+		    <a class="fancybox" rel="group" href="#political">
+		    	<div class="about-sub-title">
+		    		Political Activities
+		    	</div>		
+		    </a>
+		     <a class="fancybox" rel="group" href="#social">
+		    	<div class="about-sub-title">
+		    		Social Activities
+		    	</div>		
+		    </a>
+	    </div>
+	</div>
+
+	<div style="display:none">
+		<div id="mission" class="about-sub-desc">
+			<p>
+				Founded in 2002, the Korean Undergraduate Students Association (KUSA) exists to provide a sense of community for undergraduate students at Duke University who share a common interest in Korean culture. KUSA is dedicated to promoting the cultural, social, and political interests of the Korean community on campus through a variety of events. Furthermore, we seek to serve as a vehicle for encouraging friendship and mentorship by organizing social activities throughout the year.
+			</p>
+		</div>
+	</div>
+	<div style="display:none">
+		<div id="cultural" class="about-sub-desc">
+			<p>
+				KUSA strives to promote awareness of Korean culture by collaborating with our Korean affiliated performance organizations. Duke students have opportunities to play traditional Korean percussion (samulnori), learn choreography to the latest K-Pop music, and harmonize with our singing groups, both acapella and rock. Additionally, we have an annual cultural showcase that allows students to display their talents as part of a group or individually on a grand stage. We also participate in university-sponsored events throughout the year that promote multicultural awareness and celebrate the diversity of the Duke community. 
+			</p>
+		</div>
+	</div>
+	<div style="display:none">
+		<div id="political" class="about-sub-desc">
+			<p>
+				We organize various events that educate the rest of the Duke community about current issues relevant to Korean society as well as those that pertain to the identity of being Korean American. We seek to collaborate with academic departments and other student organizations throughout the year as a means of inviting guest speakers and encouraging open dialogue of Korean issues.  
+			</p>
+		</div>
+	</div>
+	<div style="display:none">
+		<div id="social" class="about-sub-desc">
+			<p>
+				KUSA is committed to fostering good relationships that allow one to feel he or she belongs to a tight-knit family during their Duke experience. We organize many social activities such as off-campus excursions, sporting events, and of course Korean meals that will ease your homesickness. We also frequently collaborate with other cultural organizations that involve fierce competition for prizes and immeasurable glory, but more importantly fellowship that is fruitful and long-lasting.  
+			</p>
+		</div>
 	</div>
 </div> 
 
