--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
 		<title>Duke KUSA</title>
 		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" />                
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.fancybox.css" /> 
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.fancybox.css" />
+        <link href="http://fonts.googleapis.com/css?family=Lato:300|Fjalla+One" rel="stylesheet" type="text/css" /> 
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/jcarousel.js"></script>
