--- a/templates/english.html
+++ b/templates/english.html
@@ -4,7 +4,7 @@
 <div id="carousel" data-stellar-background-ratio="1" data-stellar-horizontal-offset="1000">
 	<div class="narrower-container">
 		<div id="carousel-and-nav">
-			<a class="jcarousel-prev" href="#"><img class="arrow" src="{{ STATIC_URL }}images/left_arrow.png"></a>
+			<!-- <a class="jcarousel-prev" href="#"><img class="arrow" src="{{ STATIC_URL }}images/left_arrow.png"></a> -->
 		    <div class="jcarousel">
 		    	<ul>
 			        <li><img src="{{ STATIC_URL }}images/photo1.jpg"></li>
@@ -12,10 +12,10 @@
 			        <li><img src="{{ STATIC_URL }}images/photo3.jpg"></li>
 		        </ul>
 		    </div>
-		    <a class="jcarousel-next" href="#"><img class="arrow" src="{{ STATIC_URL }}images/right_arrow.png"></a>
+		    <!-- <a class="jcarousel-next" href="#"><img class="arrow" src="{{ STATIC_URL }}images/right_arrow.png"></a> -->
 	    </div>
 	    <br style="clear: left;" />
-	    <div class="jcarousel-pagination"></div>
+	    <!-- <div class="jcarousel-pagination"></div> -->
 	    <!-- <div id="pagination">
 	    	<div class="jcarousel-pagination"></div>
 	    </div> -->
@@ -27,53 +27,54 @@
 <div id="about">
 	<div class="narrower-container">
 	    <h1> About Us </h1>
+	    <p>Click on the photos below to learn more about what KUSA has to offer!</p>
 	    <div class="about-sub-section">
-		    <a class="fancybox" rel="group" href="#mission">
+		    <a class="fancybox" id="300" rel="group" href="#mission-desc" title="Mission Statement">
 		    	<div class="about-sub-title">
-		    		Mission Statement
+		    		<p>Mission Statement</p>
 		    	</div>		
 		    </a>
-		    <a class="fancybox" rel="group" href="#cultural">
+		    <a class="fancybox" id="350" rel="group" href="#cultural-desc" title="Cultural Activities">
 		    	<div class="about-sub-title">
-		    		Cultural Activities
+		    		<p>Cultural Activities</p>
 		    	</div>		
 		    </a>
-		    <a class="fancybox" rel="group" href="#political">
+		    <a class="fancybox" id="275" rel="group" href="#political-desc" title="Political Activities">
 		    	<div class="about-sub-title">
-		    		Political Activities
+		    		<p>Political Activities</p>
 		    	</div>		
 		    </a>
-		     <a class="fancybox" rel="group" href="#social">
+		     <a class="fancybox" id="250" rel="group" href="#social-desc" title="Social Activities">
 		    	<div class="about-sub-title">
-		    		Social Activities
+		    		<p>Social Activities</p>
 		    	</div>		
 		    </a>
 	    </div>
 	</div>
 
 	<div style="display:none">
-		<div id="mission" class="about-sub-desc">
+		<div id="mission-desc" class="about-sub-desc">
 			<p>
 				Founded in 2002, the Korean Undergraduate Students Association (KUSA) exists to provide a sense of community for undergraduate students at Duke University who share a common interest in Korean culture. KUSA is dedicated to promoting the cultural, social, and political interests of the Korean community on campus through a variety of events. Furthermore, we seek to serve as a vehicle for encouraging friendship and mentorship by organizing social activities throughout the year.
 			</p>
 		</div>
 	</div>
 	<div style="display:none">
-		<div id="cultural" class="about-sub-desc">
+		<div id="cultural-desc" class="about-sub-desc">
 			<p>
 				KUSA strives to promote awareness of Korean culture by collaborating with our Korean affiliated performance organizations. Duke students have opportunities to play traditional Korean percussion (samulnori), learn choreography to the latest K-Pop music, and harmonize with our singing groups, both acapella and rock. Additionally, we have an annual cultural showcase that allows students to display their talents as part of a group or individually on a grand stage. We also participate in university-sponsored events throughout the year that promote multicultural awareness and celebrate the diversity of the Duke community. 
 			</p>
 		</div>
 	</div>
 	<div style="display:none">
-		<div id="political" class="about-sub-desc">
+		<div id="political-desc" class="about-sub-desc">
 			<p>
 				We organize various events that educate the rest of the Duke community about current issues relevant to Korean society as well as those that pertain to the identity of being Korean American. We seek to collaborate with academic departments and other student organizations throughout the year as a means of inviting guest speakers and encouraging open dialogue of Korean issues.  
 			</p>
 		</div>
 	</div>
 	<div style="display:none">
-		<div id="social" class="about-sub-desc">
+		<div id="social-desc" class="about-sub-desc">
 			<p>
 				KUSA is committed to fostering good relationships that allow one to feel he or she belongs to a tight-knit family during their Duke experience. We organize many social activities such as off-campus excursions, sporting events, and of course Korean meals that will ease your homesickness. We also frequently collaborate with other cultural organizations that involve fierce competition for prizes and immeasurable glory, but more importantly fellowship that is fruitful and long-lasting.  
 			</p>
@@ -129,15 +130,16 @@
 				{% for member in members %}
 					<table>
 						<tr>
-							<td>Name: </td>
+							<td rowspan="4"><img src="{{member.Photo}}" /></td>
+							<th>Name: </th>
 							<td>{{member.Name}}</td>
 						</tr>
 						<tr>
-							<td>Class: </td>
+							<th>Class: </th>
 							<td>{{member.Class}}</td>
 						</tr>
 						<tr>
-							<td>Major: </td>
+							<th>Major: </th>
 							<td>
 								{% for m in member.Major %}
 									{{m}} &
@@ -145,11 +147,10 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Hometown: </td>
+							<th>Hometown: </th>
 							<td>{{member.Hometown}}</td>
 						</tr>
 					</table>
-					<br>
 				{% endfor %}
 				</div>
 		{% endfor %}
@@ -187,7 +188,7 @@
 <div id="contact">
 	<div class="narrower-container">
 		<h1>Contact Form</h1>
-		<p>To send us a message fill out the below form.</p>
+		<p>To send us a message, please fill out the form below!</p>
 	    {% if errors %}
 	        <ul>
 	            {% for error in errors %}
