--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" />                
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.fancybox.css" />
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}galleria/themes/classic/galleria.classic.css">
         <link href="http://fonts.googleapis.com/css?family=Lato:300|Fjalla+One" rel="stylesheet" type="text/css" /> 
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
@@ -11,6 +12,8 @@
         <script type="text/javascript" src="{{ STATIC_URL }}js/Stellar.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/script.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.fancybox.pack.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}galleria/galleria-1.2.9.min.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}galleria/themes/classic/galleria.classic.min.js"></script>
 	</head>
 
 	<body>
